Cache impl commit